<resources>
    <string name="app_name">Cal</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">+</string>
    <string name="button4">3</string>
    <string name="button5">4</string>
    <string name="button6">-</string>
    <string name="button7">5</string>
    <string name="button8">6</string>
    <string name="button9">*</string>
    <string name="button10">7</string>
    <string name="button11">8</string>
    <string name="button12">/</string>
    <string name="button13">9</string>
    <string name="button14">0</string>
    <string name="button15">=</string>
</resources>